--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container" id="resgen-form">
       <h1 class="text-center">RESGEN</h1>
       <h2 class="text-center">THE RESUME GENRATOR</h2>
-      <p class="text-center">By Harsh Mishra and Aarya verma</p>
+      <p class="text-center">By Harsh Mishra</p>
       <!-- bootstrap grid -->
       <div class="row">
         <!-- First col -->
